[FIX] Elements of  "Personal Access Tokens" section out of alignment and unusable on very small screens (#17129)

--- a/app/theme/client/imports/general/base_old.css
+++ b/app/theme/client/imports/general/base_old.css
@@ -1314,6 +1314,15 @@
 				border-bottom: none;
 			}
 
+			& .add-token {
+				display: flex;
+
+				& .rc-select {
+					width: 40%;
+					margin: 0 0 0 10px;
+				}
+			}
+
 			&:first-child {
 				padding-top: 0;
 			}
@@ -4145,6 +4154,15 @@
 
 		& .jump-to-large {
 			display: none;
+		}
+	}
+
+	.add-token {
+		display: block !important;
+
+		& .rc-select {
+			width: auto !important;
+			margin: 10px 0 !important;
 		}
 	}
 }
